[metadata]
name = ankichess
version = 2.0
license = MIT
description = Generate Anki packages from chess PGN files
long_description = file: README.md
author = Colin Withers
author_email = cwithers.dev@gmail.com
classifiers=
	Environment :: Console
	License :: OSI Approved :: MIT License

[options]
packages = find:
scripts = 
	ankichess

include_package_data = True
install_requires =
	chess
	genanki
